--- a/source/sass/blocks/btn.scss
+++ b/source/sass/blocks/btn.scss
@@ -4,10 +4,15 @@
   padding: 4px 4px 4px 30px;
   text-transform: uppercase;
   color: $color-cerulean-blue;
-  border: 1px solid $color-cerulean-blue;
+  border: 1px solid;
+  border-color: $color-cerulean-blue;
   border-radius: 30px;
   background-color: $color-default-white;
   cursor: pointer;
+  transition:
+    color $trans-default,
+    border-color $trans-default,
+    background-color $trans-default;
 }
 
 .btn__wrapper {
