--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -39,6 +39,11 @@
     gap: 20px;
     padding: 3px 4px 3px 20px;
   }
+
+  &:hover {
+    background-color: $color-cerulean-blue;
+    color: $color-default-white;
+  }
 }
 
 .header__button svg:nth-of-type(2) {
