--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -24,14 +24,14 @@
   top: 0;
   left: 0;
   right: 0;
-  max-height: 800px; //?
+  max-height: 800px;
 
   @include vp-1439 {
-    max-height: 1024px; //?
+    max-height: 1024px;
   }
 
   @include vp-767 {
-    max-height: 568px; //?
+    max-height: 568px;
   }
 }
 
@@ -56,7 +56,6 @@
 
 .hero__title-wrapper {
   width: 968px;
-  // padding: 40px 50px 30px;
   padding: 40px 50px 23px;
   background-color: $color-default-white;
   border-radius: 0 30px 30px 0;
@@ -103,7 +102,6 @@
 .hero__description-container {
   position: relative;
   width: 496px;
-  // padding: 1px 50px 35px;
   padding: 1px 50px 28px;
   margin-top: -1px;
   background-color: $color-default-white;
@@ -154,7 +152,6 @@
   position: relative;
   width: 276px;
   display: flex;
-  // padding: 6px 50px 40px 31px;
   padding: 7px 50px 33px 31px;
   margin-top: -1px;
   margin-left: -1px;
