--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -61,10 +61,8 @@
   }
 }
 
-.contact__list {
+.contacts__list {
   display: grid;
-  // grid-template-columns: 263px 1fr 1fr;
-  // gap: 52px;
   grid-template-columns: 290px 1fr 1fr;
   gap: 26px;
   padding-top: 18px;
@@ -80,7 +78,6 @@
 }
 
 .contacts__item {
-  // margin-left: -26px;
 
   &:last-child {
     margin-left: 27px;
@@ -92,7 +89,6 @@
 
   h3 {
     margin-bottom: 15px;
-    // margin-left: 26px;
     font-size: 12px;
     font-weight: 400;
     line-height: 12px;
@@ -112,7 +108,6 @@
 
   p,
   a {
-    // margin-left: 26px;
     font-size: 16px;
     line-height: 26px;
     color: $color-default-white;
@@ -168,7 +163,3 @@
     }
   }
 }
-
-@include vp-1439 {}
-
-@include vp-767 {}
