--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -88,7 +88,6 @@
     max-width: 290px;
     min-height: 435px;
     gap: 25px;
-    // padding: 30px 10px 25px 15px;
     padding: 30px 10px 25px 14px;
   }
 }
@@ -105,7 +104,7 @@
   }
 }
 
-.rewievs__item-user {
+.reviews__item-user {
   display: flex;
   align-items: center;
   gap: 14px;
@@ -126,10 +125,10 @@
   }
 }
 
-.rewiews__item-name-container {
+.reviews__item-name-container {
   display: flex;
   flex-direction: column;
-  gap: 1px; //???
+  gap: 1px;
   line-height: 24px;
   color: $color-cerulean-blue;
 
@@ -152,7 +151,7 @@
   }
 }
 
-.revievs__item-program,
+.reviews__item-program,
 .reviews__item-date {
   display: flex;
   flex-direction: column;
