--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -10,7 +10,7 @@ $color-transparent: rgba(255, 255, 255, 0);
 
 $color-cerulean-blue: #316dc2;
 $color-endeavour: #275699;
-$color-wild-watermelon: #ff121f;
+$color-wild-watermelon: #ff5e66;
 $color-alabaster: #f0efe9;
 $color-mischka: #a9afb7;
 $color-black-pearl: rgba(13, 29, 51, 0.4);
