--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -6,7 +6,7 @@
   }
 
   @include vp-767 {
-    margin: 60px 0 60px;
+    margin: 60px 0;
   }
 }
 
@@ -34,7 +34,7 @@
   min-width: 477px;
 
   @include vp-1439 {
-    max-width: 489px; //???
+    max-width: 489px;
   }
 
   @include vp-767 {
@@ -42,7 +42,7 @@
   }
 }
 
-.about__proj-wrapper>h2 {
+.about__proj-wrapper > h2 {
   margin-bottom: 37px;
   font-size: 50px;
   font-weight: 400;
@@ -64,7 +64,7 @@
   }
 }
 
-.about__proj-wrapper>p {
+.about__proj-wrapper > p {
   font-size: 22px;
   line-height: 32px;
 
@@ -93,7 +93,7 @@
   }
 }
 
-.about__aim-wrapper>h3 {
+.about__aim-wrapper > h3 {
   margin-bottom: 31px;
   font-size: 32px;
   font-weight: 400;
@@ -113,7 +113,7 @@
   }
 }
 
-.about__aim-wrapper>p {
+.about__aim-wrapper > p {
   margin-bottom: 33px;
   padding-right: 106px;
   font-size: 16px;
@@ -175,21 +175,21 @@
   &:active {
     color: rgb($color-default-white, 0.7);
   }
+}
 
-  &.disabled {
-    background-color: $color-transparent;
-    color: $color-mischka;
-    border-color: $color-mischka;
-    pointer-events: none;
+.about__link.disabled {
+  background-color: $color-transparent;
+  color: $color-mischka;
+  border-color: $color-mischka;
+  pointer-events: none;
 
-    .btn__wrapper {
-      background-color: $color-mischka;
-    }
+  .btn__wrapper {
+    background-color: $color-mischka;
+  }
 
-    svg {
-      color: $color-default-white;
-      opacity: 0.6;
-    }
+  svg {
+    color: $color-default-white;
+    opacity: 0.6;
   }
 }
 
@@ -291,7 +291,7 @@
     max-width: 460px;
     min-height: 128px;
     row-gap: 6px;
-    padding: 19px 19px 20px 19px;
+    padding: 19px 19px 20px;
 
     &::before {
       background-size: 18px;
@@ -308,7 +308,7 @@
     transform: translate(-50%, -50%);
     background-color: $color-cerulean-blue;
     border-radius: 50%;
-    background-image: url('../../img/star.svg');
+    background-image: url("../../img/star.svg");
     background-position: center;
     background-repeat: no-repeat;
 
@@ -318,14 +318,13 @@
   }
 
   &--diff-padding {
-
     @include vp-767 {
       padding-bottom: 24px;
     }
   }
 }
 
-.about__item-wrapper>h4 {
+.about__item-wrapper > h4 {
   font-size: 26px;
   font-weight: 400;
   line-height: 30px;
@@ -345,7 +344,7 @@
   }
 }
 
-.about__item-wrapper>p {
+.about__item-wrapper > p {
   margin-top: -3px;
   font-size: 16px;
   font-weight: 300;
