--- a/source/sass/blocks/faq.scss
+++ b/source/sass/blocks/faq.scss
@@ -50,7 +50,7 @@
 }
 
 .faq__item {
-  padding: 40px 40px 40px;
+  padding: 40px;
   color: $color-cerulean-blue;
   background-color: $color-transparent;
   border: 1px solid $color-cerulean-blue;
@@ -70,7 +70,7 @@
 
   &:nth-child(1) {
     @include vp-1439 {
-      padding: 29px 30px 29px;
+      padding: 29px 30px;
 
       .faq__svg-wrapper {
         margin-top: 2px;
@@ -78,13 +78,13 @@
     }
 
     @include vp-767 {
-      padding: 18px 14px 18px;
+      padding: 18px 14px;
     }
   }
 
   &:nth-child(2) {
     @include vp-1439 {
-      padding: 29px 30px 29px;
+      padding: 29px 30px;
     }
 
     @include vp-767 {
@@ -113,7 +113,7 @@
   }
 
   &:nth-child(5) {
-    padding: 32px 40px 32px;
+    padding: 32px 40px;
 
     .faq__svg-wrapper {
       margin-top: -14px;
@@ -128,7 +128,7 @@
     }
 
     @include vp-767 {
-      padding: 19px 14px 17px 14px;
+      padding: 19px 14px 17px;
     }
   }
 
@@ -180,8 +180,7 @@
   transition:
     color $trans-default,
     background-color $trans-default,
-    border-color $trans-default,
-  ;
+    border-color $trans-default;
 
   @include vp-1439 {
     margin-left: 100px;
@@ -236,14 +235,14 @@
     color: $color-cerulean-blue;
     background-color: $color-default-white;
     border-color: $color-default-white;
+  }
 
-    &--plus {
-      display: none;
-    }
+  .faq__svg-wrapper--plus {
+    display: none;
+  }
 
-    &--minus {
-      display: flex;
-    }
+  .faq__svg-wrapper--minus {
+    display: flex;
   }
 }
 
