--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -115,7 +115,7 @@
   @include vp-767 {
     width: 267px;
     padding: 1px 42px 10px 15px;
-    border-radius: 0 0 14px 0;
+    border-radius: 0 0 14px;
 
     &::after {
       content: "";
@@ -136,7 +136,7 @@
   }
 }
 
-.hero__description-container>p {
+.hero__description-container > p {
   line-height: 26px;
 
   @include vp-1439 {
@@ -156,7 +156,7 @@
   margin-top: -1px;
   margin-left: -1px;
   background-color: $color-default-white;
-  border-radius: 0 0 30px 0;
+  border-radius: 0 0 30px;
 
   @include vp-1439 {
     width: 268px;
@@ -184,7 +184,7 @@
     &::after {
       width: 10px;
       height: 10px;
-      top: 0px;
+      top: 0;
       right: -9px;
       background-size: 10px;
     }
@@ -235,21 +235,21 @@
   &:active {
     color: rgb($color-default-white, 0.7);
   }
+}
 
-  &.disabled {
-    background-color: $color-transparent;
-    color: $color-mischka;
-    border-color: $color-mischka;
-    pointer-events: none;
+.hero__link.disabled {
+  background-color: $color-transparent;
+  color: $color-mischka;
+  border-color: $color-mischka;
+  pointer-events: none;
 
-    .btn__wrapper {
-      background-color: $color-mischka;
-    }
+  .btn__wrapper {
+    background-color: $color-mischka;
+  }
 
-    svg {
-      color: $color-default-white;
-      opacity: 0.6;
-    }
+  svg {
+    color: $color-default-white;
+    opacity: 0.6;
   }
 }
 
@@ -282,7 +282,7 @@
     &::after {
       width: 10px;
       height: 10px;
-      bottom: 0px;
+      bottom: 0;
       right: -10px;
       background-size: 10px;
     }
@@ -308,8 +308,6 @@
   left: 0;
   width: 100px;
   height: 30px;
-
-  @include vp-1439 {}
 
   @include vp-767 {
     left: -10px;
