--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -26,118 +26,118 @@
     display: none;
   }
 
-  &__wrapper {
-    transform: translateZ(0);
-    background-color: rgba($color-default-black, 0.6);
-    position: relative;
-
-    display: flex;
-    flex-shrink: 0;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    min-height: 100%;
-    padding: 60px 40px;
-  }
-
-  &__overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-
-    width: 100%;
-    height: 100%;
-
-    cursor: pointer;
-  }
-
-  &__content {
-    position: relative;
-    width: 510px;
-    padding: 60px 80px;
-    background-color: $color-default-white;
-    border-radius: 16px;
-
-    @include vp-767 {
-      width: 290px;
-      padding: 40px 15px;
-    }
-
-    h2 {
-      margin-bottom: 20px;
-      font-size: 32px;
-      font-style: normal;
-      font-weight: 400;
-      line-height: 36px;
-      text-align: center;
-      color: $color-cerulean-blue;
-
-      @include vp-767 {
-        font-size: 18px;
-        line-height: 18px;
-      }
-    }
-
-    p {
-      margin-bottom: 30px;
-      line-height: 26px;
-      text-align: center;
-
-      @include vp-767 {
-        max-width: 220px;
-        margin: 0 auto 25px;
-        font-size: 14px;
-        line-height: 20px;
-      }
-    }
-  }
-
-  &__close-btn {
-    position: absolute;
-    top: 30px;
-    right: 30px;
-
-    padding: 0;
-
-    background: transparent;
-    border: none;
-    cursor: pointer;
-
-    @include vp-767 {
-      top: 20px;
-      right: 20px;
-    }
-
-    svg {
-      display: block;
-      color: $color-cerulean-blue;
-    }
-
-    &:hover,
-    &:active {
-      svg {
-        color: $color-endeavour;
-      }
-    }
-  }
-
   &--preload {
     transition: none;
-  }
-
-  &.is-active {
-    transform: scale(1);
-    visibility: visible;
-    opacity: 1;
-    transition: opacity 0.6s cubic-bezier(0.55, 0, 0.1, 1), transform 0.6s cubic-bezier(0.55, 0, 0.1, 1);
-
-    pointer-events: auto;
   }
 
   iframe {
     max-width: 100%;
     border: none;
   }
+}
+
+.modal__wrapper {
+  transform: translateZ(0);
+  background-color: rgba($color-default-black, 0.6);
+  position: relative;
+
+  display: flex;
+  flex-shrink: 0;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  min-height: 100%;
+  padding: 60px 40px;
+}
+
+.modal__overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 100%;
+
+  cursor: pointer;
+}
+
+.modal__content {
+  position: relative;
+  width: 510px;
+  padding: 60px 80px;
+  background-color: $color-default-white;
+  border-radius: 16px;
+
+  @include vp-767 {
+    width: 290px;
+    padding: 40px 15px;
+  }
+
+  h2 {
+    margin-bottom: 20px;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 36px;
+    text-align: center;
+    color: $color-cerulean-blue;
+
+    @include vp-767 {
+      font-size: 18px;
+      line-height: 18px;
+    }
+  }
+
+  p {
+    margin-bottom: 30px;
+    line-height: 26px;
+    text-align: center;
+
+    @include vp-767 {
+      max-width: 220px;
+      margin: 0 auto 25px;
+      font-size: 14px;
+      line-height: 20px;
+    }
+  }
+}
+
+.modal__close-btn {
+  position: absolute;
+  top: 30px;
+  right: 30px;
+
+  padding: 0;
+
+  background: transparent;
+  border: none;
+  cursor: pointer;
+
+  @include vp-767 {
+    top: 20px;
+    right: 20px;
+  }
+
+  svg {
+    display: block;
+    color: $color-cerulean-blue;
+  }
+
+  &:hover,
+  &:active {
+    svg {
+      color: $color-endeavour;
+    }
+  }
+}
+
+.modal.is-active {
+  transform: scale(1);
+  visibility: visible;
+  opacity: 1;
+  transition: opacity 0.6s cubic-bezier(0.55, 0, 0.1, 1), transform 0.6s cubic-bezier(0.55, 0, 0.1, 1);
+
+  pointer-events: auto;
 }
 
 .modal__form {
@@ -244,11 +244,11 @@
   }
 }
 
-.modal__default-checkbox:focus+.modal__custom-checkbox {
+.modal__default-checkbox:focus + .modal__custom-checkbox {
   border-color: $color-default-black;
 }
 
-.modal__default-checkbox:checked+.modal__custom-checkbox {
+.modal__default-checkbox:checked + .modal__custom-checkbox {
   background-color: $color-default-white;
   border-color: $color-cerulean-blue;
 
@@ -262,12 +262,12 @@
   }
 }
 
-.modal__default-checkbox:checked+.modal__custom-checkbox svg {
+.modal__default-checkbox:checked + .modal__custom-checkbox svg {
   display: block;
   color: $color-cerulean-blue;
 }
 
-.modal__default-checkbox:disabled+.modal__custom-checkbox {
+.modal__default-checkbox:disabled + .modal__custom-checkbox {
   border-color: $color-default-white;
   background-color: rgb($color-transparent, 0.6);
   pointer-events: none;
@@ -275,7 +275,7 @@
   outline: none;
 }
 
-.modal__default-checkbox:checked:disabled+.modal__custom-checkbox {
+.modal__default-checkbox:checked:disabled + .modal__custom-checkbox {
   background-color: $color-mischka;
   border-color: $color-mischka;
   pointer-events: none;
@@ -346,31 +346,31 @@
     font-style: normal;
     font-weight: 400;
     line-height: 14px;
-    color: #484848;
+    color: $color-default-black;
     opacity: 1;
   }
 }
 
 .custom-select__button--modal:hover {
-  border: 1px solid #484848;
+  border: 1px solid $color-default-black;
 }
 
 .custom-select__button--modal:focus {
-  border: 1px solid #484848;
+  border: 1px solid $color-default-black;
 }
 
 .modal__form-label.is-invalid input {
-  border: 1px solid #ff5e66;
-  background: rgba(255, 94, 102, 0.2);
+  border: 1px solid $color-wild-watermelon;
+  background: rgba($color-wild-watermelon, 0.2);
 }
 
 .modal__form-label.is-invalid .custom-select__button {
-  border: 1px solid #ff5e66;
-  background: rgba(255, 94, 102, 0.2);
+  border: 1px solid $color-wild-watermelon;
+  background: rgba($color-wild-watermelon, 0.2);
 }
 
 .modal__form-label.is-invalid .modal__custom-checkbox {
-  border: 1px solid #FF5E66;
+  border: 1px solid $color-wild-watermelon;
   opacity: 0.7;
-  background: rgba(255, 94, 102, 0.20);
+  background: rgba($color-wild-watermelon, 0.2);
 }
