--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -14,9 +14,7 @@
 .programs__title-container {
   display: flex;
   justify-content: space-between;
-}
 
-.programs__title-container {
   h2 {
     margin-top: 4px;
     font-size: 50px;
@@ -64,22 +62,6 @@
     color: rgb($color-default-white, 0.7);
   }
 
-  &.disabled {
-    background-color: $color-transparent;
-    color: $color-mischka;
-    border-color: $color-mischka;
-    pointer-events: none;
-
-    .btn__wrapper {
-      background-color: $color-mischka;
-    }
-
-    svg {
-      color: $color-default-white;
-      opacity: 0.6;
-    }
-  }
-
   @include vp-767 {
     font-size: 12px;
     line-height: 12px;
@@ -115,39 +97,52 @@
       background-color: $color-transparent;
     }
 
-    &:active {
-      svg {
-        opacity: 0.7;
-      }
+    &:active svg {
+      opacity: 0.7;
     }
+  }
 
-    &.disabled {
-      background-color: $color-transparent;
-      color: $color-mischka;
-      border-color: $color-mischka;
-      pointer-events: none;
+  &--little.disabled {
+    background-color: $color-transparent;
+    color: $color-mischka;
+    border-color: $color-mischka;
+    pointer-events: none;
+  }
 
-      .btn__wrapper {
-        background-color: $color-mischka;
-      }
+  &--little.disabled .btn__wrapper {
+    background-color: $color-mischka;
+  }
 
-      svg {
-        color: $color-default-white;
-        opacity: 0.6;
-      }
-    }
+  &--little.disabled svg {
+    color: $color-default-white;
+    opacity: 0.6;
+  }
 
-    div {
-      width: 30px;
-      height: 30px;
-      display: flex;
-      padding: 8px;
-    }
+  &--little div {
+    width: 30px;
+    height: 30px;
+    display: flex;
+    padding: 8px;
+  }
+}
+
+.programs__link.disabled {
+  background-color: $color-transparent;
+  color: $color-mischka;
+  border-color: $color-mischka;
+  pointer-events: none;
+
+  .btn__wrapper {
+    background-color: $color-mischka;
+  }
+
+  svg {
+    color: $color-default-white;
+    opacity: 0.6;
   }
 }
 
 .programs__slider-container {
-  // max-width: 1240px;
   padding: 0 100px 1px;
 
   @include vp-1439 {
@@ -160,8 +155,6 @@
   @include vp-767 {
     position: relative;
     width: 320px;
-    // margin-left: auto;
-    // margin-right: auto;
     padding: 0 15px 42px;
   }
 }
@@ -181,25 +174,21 @@
 .programs__item {
   position: relative;
   min-height: 420px;
-  // width: 392px;
   display: flex;
   align-items: flex-end;
   padding: 0 51px 20px 20px;
 
   @include vp-1439 {
-    // width: 324px;
     padding: 0 41px 20px 20px;
   }
 
   @include vp-767 {
-    // width: 290px;
     min-height: 400px;
-    padding: 0 10px 18px 10px;
+    padding: 0 10px 18px;
   }
 }
 
 .programs__item.swiper-slide {
-  // width: 392px;
   min-width: 392px;
   max-width: 392px;
   flex-shrink: initial;
@@ -212,7 +201,6 @@
   }
 
   @include vp-767 {
-    // width: 290px;
     min-width: 290px;
     max-width: 290px;
   }
@@ -292,7 +280,7 @@
   gap: 16px;
   padding: 12px 14px 12px 18px;
   background-color: #ffffff;
-  border-radius: 0 12px 12px 12px;
+  border-radius: 0 12px 12px;
 
   @include vp-1439 {
     width: 263px;
@@ -328,7 +316,6 @@
   padding: 0;
 
   @include vp-1439 {
-    // max-width: 560px;
     padding: 0 45px 0 0;
   }
 }
@@ -347,7 +334,7 @@
   }
 }
 
-.programs__link-btn-svg-wrapper>svg {
+.programs__link-btn-svg-wrapper > svg {
   color: $color-cerulean-blue;
 }
 
@@ -361,9 +348,6 @@
   width: 1105px;
   height: 2px;
   background-color: rgb($color-cerulean-blue, 0.2);
-  // position: absolute;
-  // bottom: 11px;
-  // left: 0;
 
   @include vp-767 {
     width: 560px;
@@ -374,42 +358,6 @@
   height: 2px;
   background: $color-cerulean-blue;
 }
-
-
-
-// .programs__slider-pagination {
-//   display: flex;
-//   align-items: center;
-
-//   @include vp-767 {
-//     display: none;
-//   }
-// }
-
-// .programs__slider-pagination .swiper-pagination-bullet {
-//   z-index: 20;
-//   width: 247px;
-//   height: 1px;
-//   background-color: $color-cerulean-blue;
-//   opacity: 0.2;
-
-//   @include vp-1439 {
-//     width: 79px;
-//   }
-
-//   @include vp-767 {}
-// }
-
-// .programs__slider-pagination .swiper-pagination-bullet-active {
-//   width: 392px;
-//   opacity: 1;
-
-//   @include vp-1439 {
-//     width: 324px;
-//   }
-
-//   @include vp-767 {}
-// }
 
 .programs__link-btn-svg-wrapper {
   width: 22px;
