--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -80,7 +80,7 @@
     max-width: 560px;
     min-height: 395px;
     gap: 24px;
-    padding: 50px 49px 46px 49px;
+    padding: 50px 49px 46px;
   }
 
   @include vp-767 {
@@ -168,8 +168,6 @@
   }
 
   h3 {
-    // margin-top: 9px;
-    // margin-bottom: 11px;
     font-size: 12px;
     font-weight: 400;
     line-height: 12px;
@@ -200,8 +198,6 @@
 
 .reviews__item-main {
   h3 {
-    // margin-top: 9px;
-    // margin-bottom: 25px;
     margin-bottom: 14px;
     font-size: 24px;
     font-weight: 400;
@@ -209,7 +205,7 @@
     color: $color-cerulean-blue;
 
     @include vp-1439 {
-      margin-bottom: 16px; //??
+      margin-bottom: 16px;
       font-size: 20px;
       line-height: 24px;
     }
@@ -241,7 +237,6 @@
   padding: 0;
 
   @include vp-1439 {
-    // max-width: 560px;
     padding: 0 45px 0 0;
   }
 }
