--- a/source/sass/blocks/news.scss
+++ b/source/sass/blocks/news.scss
@@ -57,7 +57,7 @@
     border-color: $color-cerulean-blue;
   }
 
-  .swiper-grid-column > .swiper-wrapper {
+  .swiper-grid-column>.swiper-wrapper {
     flex-wrap: wrap;
     flex-direction: column;
   }
@@ -151,6 +151,7 @@
 
   @include vp-767 {
     justify-content: flex-start;
+    padding-left: 15px;
     margin-bottom: 24px;
   }
 }
@@ -498,7 +499,7 @@
   transition: background-color $trans-default;
 }
 
-.news__link-svg-wrapper > svg {
+.news__link-svg-wrapper>svg {
   color: $color-default-white;
 }
 
@@ -526,7 +527,7 @@
   transition: background-color $trans-default;
 }
 
-.news__link-btn-svg-wrapper > svg {
+.news__link-btn-svg-wrapper>svg {
   color: $color-cerulean-blue;
 }
 
@@ -563,7 +564,7 @@
   position: absolute;
   bottom: 0;
   left: 50%;
-  transform: translateX(-50%);
+  transform: translateX(-37%);
   display: flex;
   gap: 20px;
   margin: 0 auto;
