Правит переключение в слайдере news

--- a/source/sass/blocks/news.scss
+++ b/source/sass/blocks/news.scss
@@ -12,6 +12,7 @@
   .swiper-pagination-bullet {
     width: 32px;
     height: 32px;
+    flex-shrink: 0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -402,8 +403,8 @@
   @include vp-767 {
     max-width: 290px;
     min-width: 290px;
-    min-height: 330px;
-    max-height: 330px;
+    min-height: 240px;
+    max-height: 240px;
   }
 
   h3 {
@@ -435,6 +436,13 @@
       width: 263px;
       padding: 12px 9px 10px 0;
     }
+  }
+}
+
+.news__slider-slide--tall.swiper-slide {
+  @include vp-767 {
+    min-height: 330px;
+    max-height: 330px;
   }
 }
 
@@ -570,7 +578,7 @@
   margin: 0 auto;
 
   @include vp-767 {
-    transform: translateX(-43%);
+    transform: translateX(-62%);
     gap: 16px;
   }
 }
