Правит иконки кнопки меню

--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -22,6 +22,7 @@
 
 .header__button {
   z-index: 50;
+  min-height: 54px;
   width: 133px;
   gap: 19px;
   padding-left: 18px;
@@ -44,17 +45,41 @@
     background-color: $color-cerulean-blue;
     color: $color-default-white;
   }
+
+  &:hover span {
+    background-color: $color-default-white;
+    color: $color-cerulean-blue;
+  }
+
+  &:active {
+    background-color: $color-endeavour;
+    border-color: $color-endeavour;
+  }
+
+  span {
+    width: 46px;
+    height: 46px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    background-color: $color-cerulean-blue;
+    color: $color-default-white;
+    transition:
+      background-color $trans-default,
+      color $trans-default;
+  }
 }
 
-.header__button svg:nth-of-type(2) {
+.header__button .header__button-close {
   display: none;
 }
 
-.header__button.is-open svg:nth-of-type(2) {
-  display: block;
+.header__button.is-open .header__button-close {
+  display: flex;
 }
 
-.header__button.is-open svg:nth-of-type(1) {
+.header__button.is-open .header__button-menu {
   display: none;
 }
 
