ПП модального окна и меню

--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -99,10 +99,10 @@
   opacity: 0;
   visibility: hidden;
   position: absolute;
-  top: 65px;
+  top: 58px;
   right: 100px;
   width: 286px;
-  padding: 35px 25px;
+  padding: 31px 25px 29px;
   background-color: $color-cerulean-blue;
   border-radius: 16px;
   transition:
