--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -48,6 +48,10 @@
   width: 100%;
   min-height: 100%;
   padding: 60px 40px;
+
+  @include vp-767 {
+    padding: 60px 25px;
+  }
 }
 
 .modal__overlay {
@@ -64,17 +68,17 @@
 .modal__content {
   position: relative;
   width: 510px;
-  padding: 60px 80px;
+  padding: 53px 80px 60px;
   background-color: $color-default-white;
   border-radius: 16px;
 
   @include vp-767 {
     width: 290px;
-    padding: 40px 15px;
+    padding: 37px 15px 40px;
   }
 
   h2 {
-    margin-bottom: 20px;
+    margin-bottom: 8px;
     font-size: 32px;
     font-style: normal;
     font-weight: 400;
@@ -89,13 +93,13 @@
   }
 
   p {
-    margin-bottom: 30px;
+    margin-bottom: 19px;
     line-height: 26px;
     text-align: center;
 
     @include vp-767 {
       max-width: 220px;
-      margin: 0 auto 25px;
+      margin: 0 auto 20px;
       font-size: 14px;
       line-height: 20px;
     }
@@ -121,6 +125,11 @@
   svg {
     display: block;
     color: $color-cerulean-blue;
+
+    @include vp-767 {
+      width: 16px;
+      height: 16px;
+    }
   }
 
   &:hover,
@@ -175,12 +184,20 @@
   label {
     display: flex;
     flex-direction: column;
-    gap: 12px;
+    gap: 6px;
+
+    @include vp-767 {
+      gap: 9px;
+    }
   }
 }
 
 .modal__form-label {
-  margin-bottom: 20px;
+  margin-bottom: 18px;
+
+  @include vp-767 {
+    margin-bottom: 14px;
+  }
 
   span {
     font-size: 14px;
@@ -196,6 +213,10 @@
 .modal__form-label--checkbox {
   position: relative;
   padding-left: 30px;
+
+  @include vp-767 {
+    margin-bottom: 10px;
+  }
 
   label {
     flex-direction: row;
@@ -244,11 +265,11 @@
   }
 }
 
-.modal__default-checkbox:focus + .modal__custom-checkbox {
+.modal__default-checkbox:focus+.modal__custom-checkbox {
   border-color: $color-default-black;
 }
 
-.modal__default-checkbox:checked + .modal__custom-checkbox {
+.modal__default-checkbox:checked+.modal__custom-checkbox {
   background-color: $color-default-white;
   border-color: $color-cerulean-blue;
 
@@ -262,12 +283,12 @@
   }
 }
 
-.modal__default-checkbox:checked + .modal__custom-checkbox svg {
+.modal__default-checkbox:checked+.modal__custom-checkbox svg {
   display: block;
   color: $color-cerulean-blue;
 }
 
-.modal__default-checkbox:disabled + .modal__custom-checkbox {
+.modal__default-checkbox:disabled+.modal__custom-checkbox {
   border-color: $color-default-white;
   background-color: rgb($color-transparent, 0.6);
   pointer-events: none;
@@ -275,7 +296,7 @@
   outline: none;
 }
 
-.modal__default-checkbox:checked:disabled + .modal__custom-checkbox {
+.modal__default-checkbox:checked:disabled+.modal__custom-checkbox {
   background-color: $color-mischka;
   border-color: $color-mischka;
   pointer-events: none;
@@ -298,7 +319,7 @@
 
   @include vp-767 {
     width: 100%;
-    padding-left: 80px;
+    padding-left: 73px;
     font-size: 12px;
     line-height: 12px;
     letter-spacing: 0.24px;
@@ -337,6 +358,15 @@
       color: $color-default-white;
       opacity: 0.6;
     }
+  }
+}
+
+.modal__form-select {
+  margin-bottom: 10px;
+
+  @include vp-767 {
+    margin-top: -4px;
+    margin-bottom: 2px;
   }
 }
 
