--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -322,6 +322,7 @@
   background-color: $color-default-white;
   border: 1px solid $color-cerulean-blue;
   border-radius: 50%;
+  cursor: pointer;
 
   @include vp-767 {
     width: 8px;
