--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -314,3 +314,9 @@
 .reviews__slider-button:disabled .reviews__link-btn-svg-wrapper {
   background-color: $color-transparent;
 }
+
+.reviews__slider-button.swiper-button-disabled {
+  cursor: not-allowed;
+  pointer-events: none;
+  outline: none;
+}
