--- a/source/sass/blocks/faq.scss
+++ b/source/sass/blocks/faq.scss
@@ -68,7 +68,7 @@
     padding: 20px 15px;
   }
 
-  &:nth-child(1) {
+  &--first {
     @include vp-1439 {
       padding: 29px 30px;
 
@@ -82,7 +82,7 @@
     }
   }
 
-  &:nth-child(2) {
+  &--second {
     @include vp-1439 {
       padding: 29px 30px;
     }
@@ -92,19 +92,11 @@
     }
   }
 
-  &:nth-child(4) {
+  &--fourth {
     padding: 33px 40px 31px;
-
-    .faq__svg-wrapper {
-      margin-top: -14px;
-    }
 
     @include vp-1439 {
       padding: 24px 30px 24px 29px;
-
-      .faq__svg-wrapper {
-        margin-top: 0;
-      }
     }
 
     @include vp-767 {
@@ -112,23 +104,31 @@
     }
   }
 
-  &:nth-child(5) {
-    padding: 32px 40px;
+  &--fourth .faq__svg-wrapper {
+    margin-top: -14px;
 
-    .faq__svg-wrapper {
-      margin-top: -14px;
+    @include vp-1439 {
+      margin-top: 0;
     }
+  }
+
+  &--fifth {
+    padding: 32px 40px;
 
     @include vp-1439 {
       padding: 24px 30px 22px 29px;
-
-      .faq__svg-wrapper {
-        margin-top: -1px;
-      }
     }
 
     @include vp-767 {
       padding: 19px 14px 17px;
+    }
+  }
+
+  &--fifth .faq__svg-wrapper {
+    margin-top: -14px;
+
+    @include vp-1439 {
+      margin-top: -1px;
     }
   }
 
